--- a/app/views/tasks/new.html.haml
+++ b/app/views/tasks/new.html.haml
@@ -1,2 +1,3 @@
-= render 'form', task: @task
-= link_to 'Back', user_path(current_user)
+.form.form--task
+  = render 'form', task: @task
+  = link_to 'Back', user_path(current_user)
