--- a/app/views/tasks/_posts.html.haml
+++ b/app/views/tasks/_posts.html.haml
@@ -1,44 +1,45 @@
 - tasks.each do |task|
   .task
-    .task__left
-      = link_to user_path(task.user_id) do
-        .user-info.user-info--link
-          .user-info__name
-            = task.user.name
-          .user-info__image
-            = image_tag task.user.image.url
+    = link_to task_path(task), class: "task-link" do
+      .task__left
+        = link_to user_path(task.user_id) do
+          .user-info.user-info--link
+            .user-info__name
+              = task.user.name
+            .user-info__image
+              = image_tag task.user.image.url
 
-    .task__right
-      .task__main
-        .task__main__left-box
-          .date
-            = task.date.strftime('%-m月%-d日')
+      .task__right
+        .task__main
+          .task__main__left-box
+            .date
+              = task.date.strftime('%-m月%-d日')
 
-          - if task.score == "done"
-            = icon('fa', 'check', class: "score-icon score-icon--done")
-          - else task.score == "bad"
-            = icon('fa', 'times', class: "score-icon score-icon--bad")
+            - if task.score == "done"
+              = icon('fa', 'check', class: "score-icon score-icon--done")
+            - else task.score == "bad"
+              = icon('fa', 'times', class: "score-icon score-icon--bad")
 
-          .body
-            = task.body
+            .body
+              = task.body
 
-        .task__main__right-box
-          .routine-list
-            - if task.user.routines.length != 0
-              - task.user.routines.each do |r|
-                .routine
-                  = r.content
-            - else 
-              .routine.routine--none
-                習慣が設定されていません
+          .task__main__right-box
+            .routine-list
+              - if task.user.routines.length != 0
+                - task.user.routines.each do |r|
+                  .routine
+                    = r.content
+              - else 
+                .routine.routine--none
+                  習慣が設定されていません
 
-          - if current_user.already_praised?(task)
-            = link_to task_praise_path(task, id: current_user), method: :delete, class: "good-job good-job--on" do
-              = icon('far', 'thumbs-up', class: "good-job__btn good-job--on") 
-              .good-job__count
-                = task.praises.count
-          - else
-            = link_to task_praises_path(task), method: :post, class: "good-job good-job--off" do
-              = icon('far', 'thumbs-up', class: "good-job__btn good-job--off")
-              .good-job__count
-                = task.praises.count
+            - if current_user.already_praised?(task)
+              = link_to task_praise_path(task, id: current_user), method: :delete, class: "good-job good-job--on" do
+                = icon('far', 'thumbs-up', class: "good-job__btn good-job--on") 
+                .good-job__count
+                  = task.praises.count
+            - else
+              = link_to task_praises_path(task), method: :post, class: "good-job good-job--off" do
+                = icon('far', 'thumbs-up', class: "good-job__btn good-job--off")
+                .good-job__count
+                  = task.praises.count
