--- a/app/assets/stylesheets/_form.scss
+++ b/app/assets/stylesheets/_form.scss
@@ -25,7 +25,6 @@
       color: gray;
     }
   }
-
   &__title {
     display: flex;
     justify-content: space-between;
@@ -47,7 +46,6 @@
       }
     }
   }
-
   .field {
     margin: 40px 20px;
     color: gray;
@@ -85,6 +83,123 @@
       padding-left: 10px;
       li {
         list-style: disc;
+      }
+    }
+  }
+
+  &--task {
+    padding:20px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__title {
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid lightsteelblue;
+    align-items: center;
+    margin-bottom: 20px;
+
+    #delete-icon {
+      color: rgb(90, 90, 90);
+      &:hover {
+        color: black;
+      }
+    }
+    }
+    .task-field {
+      margin: 10px 0 20px;
+
+      &__body {
+        width: 290px;
+        height: 122px;
+        border: 1px solid gray;
+        word-wrap: break-word;
+        overflow-y: scroll;
+        padding: 5px;
+      }
+      #score-field {
+        display: flex;
+        justify-content: center;
+
+        .score {
+          display: block;
+          height: 120px;
+          width: 120px;
+          text-align: center;
+          font-size: 100px;
+          line-height: 120px;
+          &--btn {
+            cursor: pointer;
+            opacity: 0.3;
+          }
+          &--check {
+            background-color: rgb(243, 255, 232);
+            color: greenyellow;
+          }
+          &--bad {
+            background-color: rgb(255, 233, 233);
+            color: rgba(255, 0, 0, 0.699);
+          }
+          &--left {
+            margin-right: 50px;
+          }
+        }
+        input[type="radio"] {
+          display: none;
+          &:checked + .score--btn {
+            opacity: 1;
+            border: 5px solid lightskyblue
+          }
+          &:not(:checked) + .score--btn {
+            &:hover {
+            opacity: 0.5;
+            border: 1px solid lightskyblue
+            }
+          }
+        }
+      }
+    }
+    textarea {
+      resize: none;
+    }
+    .task-actions input {
+      display: block;
+      border-style: none;
+      background-color: rgb(81, 183, 247);
+      color: white;
+      cursor: pointer;
+      text-align: center;
+      margin: 0 auto 20px;
+      width: 290px;
+      height: 50px;
+      &:hover {
+        background-color: rgb(109, 197, 252);
+      }
+    }
+    .good-job {
+      background-color: white;
+      display: flex;
+      padding: 0 3px;
+      margin-top: 2px;
+      border: 1px solid;
+      border-radius: 15px;
+
+      &--on {
+        color: rgb(252, 77, 135);
+      }
+      &--off {
+        color: lightskyblue;
+      }
+      &__btn {
+        margin-right: 2px;
+        margin-top: 1px;
+        font-size: 14px;
+        
+      }
+      &__count {
+        font-size: 12px;
       }
     }
   }
