--- a/app/assets/stylesheets/_tasks.scss
+++ b/app/assets/stylesheets/_tasks.scss
@@ -205,7 +205,7 @@
   
   #comments-window {
     
-    #comment-form {
+    #comment-top {
       padding: 10px 20px;
       background-color: rgb(241, 241, 241);
       
