--- a/app/assets/stylesheets/_tasks.scss
+++ b/app/assets/stylesheets/_tasks.scss
@@ -17,11 +17,11 @@
   border: 1px solid lightskyblue;
   box-shadow: 1px 1px 3px lightslategray;
   margin-bottom: 20px;
-  padding: 10px;
+  padding: 10px 10px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 205px;
+  height: 220px;
   width: 100%;
   position: relative;
 
@@ -29,18 +29,27 @@
     position: absolute;
     height: 100%;
     width: 100%;
+    top: 0;
+    left: 0;
     z-index: 1;
+  }
+
+  .task-date {
+    font-size: 12px;
+    position: absolute;
+    top: 3px;
+    right: 10px;
   }
 
   &__left {
     width: 125px;
-    
+
     .user-info {
       text-align: center;
       padding: 10px;
       z-index: 2;
       position: absolute;
-      top: 25px;
+      top: 35px;
       left: 20px;
 
       &--link:hover {
