--- a/app/assets/stylesheets/_tasks.scss
+++ b/app/assets/stylesheets/_tasks.scss
@@ -154,28 +154,32 @@
             }
           }
         }
-        .good-job {
-          display: flex;
+        .praise-content {
           margin: 5px 5px 5px auto;
-          padding: 2px 5px 0;
-          border: 1px solid;
-          border-radius: 15px;
           z-index: 2;
-          &:hover {
-            opacity: 0.7;
-          }
-          &--on {
-            color: rgb(252, 77, 135);
-          }
-          &--off {
-            color: lightskyblue;
-          }
-          &__btn {
-            margin-right: 5px;
-            font-size: 18px;
-          }
-          &__count {
-            font-size: 16px;
+          
+          .good-job {
+            display: flex;
+            padding: 2px 5px 0;
+            border: 1px solid;
+            border-radius: 15px;
+            
+            &:hover {
+              opacity: 0.7;
+            }
+            &--on {
+              color: rgb(252, 77, 135);
+            }
+            &--off {
+              color: lightskyblue;
+            }
+            &__btn {
+              margin-right: 5px;
+              font-size: 18px;
+            }
+            &__count {
+              font-size: 16px;
+            }
           }
         }
       }
