--- a/app/views/users/_user_index.html.haml
+++ b/app/views/users/_user_index.html.haml
@@ -10,12 +10,8 @@
 
     .user__right
       - if user != current_user
-        - if current_user.already_followed?(user)
-          = link_to user_relationship_path(user), class: "follow-btn follow-btn--on", method: :delete do
-            フォロー中
-        - else
-          = link_to user_relationships_path(user), class: "follow-btn follow-btn--off", method: :post do
-            ＋ フォロー
+        .follow-content{id: "follow-#{user.id}"}
+          = render partial: "users/follow-btn", locals: { user: user } 
 
       .routine-list
         - if user.routines.length != 0
