--- a/app/assets/stylesheets/_calendar.scss
+++ b/app/assets/stylesheets/_calendar.scss
@@ -64,6 +64,7 @@
       .new_task_link {
         height: 90px;
         width: 100%;
+        cursor: pointer;
       }
       .holiday_name {
         color: lightcoral;
