--- a/app/assets/stylesheets/_tasks.scss
+++ b/app/assets/stylesheets/_tasks.scss
@@ -25,6 +25,25 @@
   width: 100%;
   position: relative;
 
+  .task-menu {
+    font-size: 20px;
+    
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 10px;
+    align-items: center;
+
+    #task-edit {
+      color: rgb(0, 0, 146);
+      margin-right: 5px;
+      cursor: pointer;
+    }
+    #task-delete {
+      color: rgb(0, 0, 146);
+    }
+  }
+
   .task-link {
     position: absolute;
     height: 100%;
