--- a/app/assets/stylesheets/_tasks.scss
+++ b/app/assets/stylesheets/_tasks.scss
@@ -34,12 +34,12 @@
     left: 10px;
     align-items: center;
 
-    #task-edit {
+    #task-edit-icon {
       color: rgb(0, 0, 146);
       margin-right: 5px;
       cursor: pointer;
     }
-    #task-delete {
+    #task-delete-icon {
       color: rgb(0, 0, 146);
     }
   }
