--- a/app/assets/stylesheets/_form.scss
+++ b/app/assets/stylesheets/_form.scss
@@ -6,7 +6,7 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  z-index: 5;
+  z-index: 20;
   position: fixed;
   padding-top: 20px;
 
@@ -69,6 +69,12 @@
         background-color: rgb(109, 197, 252);
       }
     }
+  }
+  textarea {
+    resize: none;
+    display: block;
+    margin: 0 auto;
+    padding: 10px;
   }
   #error_explanation {
     border: 1px solid rgb(255, 60, 0);
@@ -161,11 +167,7 @@
         }
       }
     }
-    textarea {
-      resize: none;
-      display: block;
-      margin: 0 auto;
-    }
+    
     .task-actions input {
       display: block;
       border-style: none;
@@ -210,4 +212,32 @@
 #new-task {
   display: none;
 }
+
+#edit-task {
+  display: none;
+}
+
+#new-routine {
+  display: none;
+}
+
+.edit-routine {
+  display: none;
+}
+
+.routine-actions {
+  input {
+  background-color: rgb(81, 183, 247);
+  color: white;
+  cursor: pointer;
+  text-align: center;
+  width: 100%;
+  height: 50px;
+  
+  &:hover {
+    background-color: rgb(109, 197, 252);
+  }
+  }
+}
+
 
