--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -2,8 +2,8 @@
   .task
     - if @task.user == current_user
       .task-menu
-        = icon('fa', 'edit', id: "task-edit")
-        = link_to task_path(@task), id: "task-delete", method: :delete, data: { confirm: '削除します。よろしいですか?' } do
+        = icon('fa', 'edit', id: "task-edit-icon")
+        = link_to task_path(@task), id: "task-delete-icon", method: :delete, data: { confirm: '削除します。よろしいですか?' } do
           = icon('fa', 'trash-alt')
     .task-date
       = @task.created_at.strftime('%Y/%-m/%-d %-H:%M')
@@ -23,8 +23,10 @@
 
           - if @task.score == "done"
             = icon('fa', 'check', class: "score-icon score-icon--done")
-          - else @task.score == "bad"
+          - elsif @task.score == "bad"
             = icon('fa', 'times', class: "score-icon score-icon--bad")
+          - else
+            = ""
 
           .body
             = simple_format @task.body
@@ -72,3 +74,6 @@
                 = simple_format comment.content
               .comment-date
                 = comment.created_at.strftime('%Y/%-m/%-d %-H:%M')
+
+- if @task.user == current_user
+  = render partial: "form", locals: { task: @task }
