update top page view

--- a/app/views/welcome/home.html.haml
+++ b/app/views/welcome/home.html.haml
@@ -1,8 +1,8 @@
 .home-title
   = icon('fa', 'check', class: "task-icon")
   継続しよう
-.image-mask
-  .back-image
+.image_mask
+  = image_tag asset_path('top-page-background.png')
 .home-contents
   #login-btn.btn
     ログイン
