--- a/app/assets/stylesheets/_tasks.scss
+++ b/app/assets/stylesheets/_tasks.scss
@@ -1,15 +1,21 @@
+.jscroll {
+  padding: 30px 0;
+}
+
 .task-list {
   margin: 0 auto;
-  padding: 20px;
+  padding: 0 20px;
   max-width: 800px;
-  &--down {
-    padding-top: 200px
-  }
 }
+
 .task-show-window {
   margin: 0 auto;
   padding: 20px;
   max-width: 800px;
+}
+
+.praise_task-window {
+  padding-top: 200px;
 }
 
 .task {
@@ -293,4 +299,8 @@
       height: 100%;
     }
   }
+}
+
+nav.pagination {
+  display: none;
 }
