--- a/app/assets/stylesheets/_user_index.scss
+++ b/app/assets/stylesheets/_user_index.scss
@@ -1,10 +1,11 @@
 .user-list {
   margin: 0 auto;
-  padding: 20px;
+  padding: 0 20px;
   max-width: 700px;
-  &--down {
-    padding-top: 200px
-  }
+}
+
+.user-list-window {
+  padding-top: 220px;
 }
 .user {
   background-color: white;
