change the title

--- a/app/assets/stylesheets/_common.scss
+++ b/app/assets/stylesheets/_common.scss
@@ -22,10 +22,11 @@ header {
     line-height: 40px;
     justify-content: space-between;
 
-    .logo {
+    #logo {
       color: white;
       width: 120px;
       margin-left: 20px;
+      font-size: 18px;
     }
 
     .menu-list {
