--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title Routine diary
+    %title Continue！
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all'
@@ -11,7 +11,7 @@
     %div{id: "modal-wrapper"}
     %header
       .nav-bar
-        = link_to "トップページ", root_path, class: "logo"
+        = link_to "Continue!", root_path, id: "logo"
         - if user_signed_in?
           .menu-list
             = link_to "投稿一覧", tasks_path, class: "menu-list__menu"
